feat: able to retrieve all blocks by single request in /blocksTerse